--- a/sass/pages/_galeria.sass
+++ b/sass/pages/_galeria.sass
@@ -19,10 +19,13 @@
         grid-area: contenido-1-galeria
         background: #506266
         @include galeria-seccion
+        margin: 0px 10px
+        
     .seccion-videos
         
         grid-area: contenido-2-galeria
         background: #506266
         @include galeria-seccion
+        margin: 0px 10px
         
     
