--- a/sass/pages/_palmares.sass
+++ b/sass/pages/_palmares.sass
@@ -18,12 +18,15 @@
     .seccion-Nivel-1
         grid-area: contenido-1-palmares
         @include palmares-secciones
+        margin: 0px 10px
     .seccion-Nivel-2
         grid-area: contenido-2-palmares
         @include palmares-secciones
+        margin: 0px 10px
     .seccion-Nivel-3
         grid-area: contenido-3-palmares
         @include palmares-secciones
+        margin: 0px 10px
     .conteiner-titulo-tarjeta
         align-content: center
         .titulo-tarjeta
